fixed uncentered table, scroll overflow on all screen sizes

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -8,13 +8,9 @@ ol, ul {
 }
 
 .week-table {
-  margin: auto;
-  border-collapse: collapse;
-  overflow-x: auto;
-  display: block;
-  width: fit-content;
-  max-width: 100%;
-  box-shadow: 0 0 1px 1px rgba(0, 0, 0, .1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .board-row:after {
@@ -50,5 +46,14 @@ ol, ul {
 }
 
 .table-container {
-  overflow-x: scroll;
+  margin: auto;
+  max-width: 100%;
+  overflow-x: auto;
+}
+
+.table-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
